add gh-pages support

--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "vite-react-starter",
+  "name": "search-form-movie-onrender",
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "homepage": "https://alfathmuqoddas.github.io/search-form-movie-onrender/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -16,6 +19,7 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0-beta.0",
+    "gh-pages": "^6.1.1",
     "vite": "^4.3.0-beta.2"
   }
 }
